trying to fix mobile cutoff v10

--- a/styles.css
+++ b/styles.css
@@ -547,6 +547,8 @@ html, body { /*done*/
         padding: 0;
         border-radius: 0;
         height: calc(100vh - 75px); 
+        position: relative; 
+        bottom: 75px;
     }
 
     .bottomBarMobile { /* the icons are not spaced properly*/
